# fast_api_ge_profiler

./: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
app/: main.py
