[tool.poetry]
name = "fast_api_ge_profiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.10"
numpy = ">=1.23.1"
scipy = ">=1.9.0"
great-expectations = "^0.15.19"
snowflake-connector-python = "^2.7.11"
fastapi = "^0.80.0"
uvicorn = "^0.18.2"
snowflake-sqlalchemy = "^1.4.1"
psycopg2-binary = "^2.9.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
